@@ -1,3 +1,4 @@
+	* force-proxy no longer disables DHT
 	* improve connect-boost feature, to make new torrents quickly connect peers
 
 1.1.9 release
